<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA">

    <!-- Background Box -->
    <View
        android:id="@+id/rectangle"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_gravity="center"
        android:background="@drawable/background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Icon Return -->
    <ImageView
        android:id="@+id/img_item_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_icon_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/icon_return" />

    <!-- Profile Image -->
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/img_item_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="20dp" />

    <!-- User ID -->
    <TextView
        android:id="@+id/tv_item_userid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/titilliumweb_bold"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_item_photo"
        tools:text="@string/userid" />

    <!-- Location -->
    <TextView
        android:id="@+id/tv_item_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/titilliumweb_bold"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_item_userid"
        tools:text="@string/location" />

    <!-- Company -->
    <TextView
        android:id="@+id/tv_item_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/titilliumweb_bold"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_item_location"
        tools:text="@string/company" />

    <!-- Information Box -->
    <View
        android:id="@+id/information_box"
        android:layout_width="345dp"
        android:layout_height="130dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/information_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_item_company" />

    <!-- Text Information -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="@id/information_box"
        app:layout_constraintStart_toStartOf="@id/information_box"
        android:fontFamily="@font/titilliumweb_bold"
        android:text="@string/information"
        android:textColor="#0B0C1A"
        android:textSize="14sp" />

    <!-- Icon Follower -->
    <ImageView
        android:id="@+id/icon_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="@id/information_box"
        app:layout_constraintStart_toStartOf="@id/information_box"
        app:layout_constraintBottom_toBottomOf="@id/information_box"
        app:tint="#0B0C1A"
        android:src="@drawable/ic_icon_followers"
        android:contentDescription="@string/icon_follower" />

    <!-- Follower Number -->
    <TextView
        android:id="@+id/tv_item_follower_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        app:layout_constraintTop_toTopOf="@id/information_box"
        app:layout_constraintStart_toEndOf="@id/icon_follower"
        app:layout_constraintBottom_toBottomOf="@id/information_box"
        android:fontFamily="@font/titilliumweb_bold"
        android:textSize="18sp"
        android:textColor="#0B0C1A"
        tools:text="@string/follower_number" />

    <!-- Follower -->
    <TextView
        android:id="@+id/tv_item_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_item_follower_number"
        app:layout_constraintTop_toBottomOf="@id/tv_item_follower_number"
        android:fontFamily="@font/titilliumweb_semibold"
        android:text="@string/Follower"
        android:textColor="#B5B6C4"
        android:textSize="12sp" />

    <!-- Icon Following -->
    <ImageView
        android:id="@+id/icon_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toTopOf="@id/information_box"
        app:layout_constraintStart_toEndOf="@id/tv_item_follower"
        app:layout_constraintBottom_toBottomOf="@id/information_box"
        app:tint="#0B0C1A"
        android:src="@drawable/ic_icon_following"
        android:contentDescription="@string/icon_following" />

    <!-- Following Number -->
    <TextView
        android:id="@+id/tv_item_following_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        app:layout_constraintTop_toTopOf="@id/information_box"
        app:layout_constraintStart_toEndOf="@id/icon_following"
        app:layout_constraintBottom_toBottomOf="@id/information_box"
        android:fontFamily="@font/titilliumweb_bold"
        android:textSize="18sp"
        android:textColor="#0B0C1A"
        tools:text="@string/following_number" />

    <!-- Following -->
    <TextView
        android:id="@+id/tv_item_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_item_following_number"
        app:layout_constraintTop_toBottomOf="@id/tv_item_following_number"
        android:fontFamily="@font/titilliumweb_semibold"
        android:textColor="#B5B6C4"
        android:textSize="12sp"
        android:text="@string/Following" />

    <!-- Icon Repository -->
    <ImageView
        android:id="@+id/icon_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toTopOf="@id/information_box"
        app:layout_constraintStart_toEndOf="@id/tv_item_following"
        app:layout_constraintBottom_toBottomOf="@id/information_box"
        app:tint="#0B0C1A"
        android:src="@drawable/ic_icon_repository"
        android:contentDescription="@string/icon_repository" />

    <!-- Repository Number-->
    <TextView
        android:id="@+id/tv_item_repository_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        app:layout_constraintTop_toTopOf="@id/information_box"
        app:layout_constraintStart_toEndOf="@id/icon_repository"
        app:layout_constraintBottom_toBottomOf="@id/information_box"
        android:fontFamily="@font/titilliumweb_bold"
        android:textSize="18sp"
        android:textColor="#0B0C1A"
        tools:text="@string/repository_number" />

    <!-- Repository -->
    <TextView
        android:id="@+id/tv_item_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_item_repository_number"
        app:layout_constraintTop_toBottomOf="@id/tv_item_repository_number"
        android:fontFamily="@font/titilliumweb_semibold"
        android:textColor="#B5B6C4"
        android:textSize="12sp"
        android:text="@string/repository" />

    <!-- Tab Layout-->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/titilliumweb_bold"
        android:textColor="#0B0C1A"
        app:layout_constraintTop_toBottomOf="@id/information_box"
        android:background="#FAFAFA"
        app:tabTextColor="#0B0C1A" />

    <!-- View Pager -->
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs" />

    <!-- ProgressBar -->
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/btn_favorite"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/favorite_toggle"
        android:textOn=""
        android:textOff=""
        android:focusable="false"
        android:backgroundTint="@color/purple_200"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>